--- a/UT2024P4LP4.Web/Components/Layout/NavMenu.razor
+++ b/UT2024P4LP4.Web/Components/Layout/NavMenu.razor
@@ -4,7 +4,7 @@
 
 <div class="top-row ps-3 navbar navbar-dark">
     <div class="container-fluid">
-        <a class="navbar-brand" href="">UT2024P4LP4.Web</a>
+        <a class="navbar-brand" href="">Inventary Soft</a>
     </div>
 </div>
 
@@ -18,9 +18,14 @@
             </NavLink>
         </div>
 
-        <div class="nav-item px-3">
+        @* <div class="nav-item px-3">
             <NavLink class="nav-link" href="counter">
                 <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Counter
+            </NavLink>
+        </div> *@
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="productos">
+                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Productos
             </NavLink>
         </div>
 
