Implementado reportes y realizando la actividad #1

--- a/UT2024P4LP4.Web/Components/_Imports.razor
+++ b/UT2024P4LP4.Web/Components/_Imports.razor
@@ -11,3 +11,4 @@
 @using UT2024P4LP4.Web.Components
 @using UT2024P4LP4.Web.Services
 @using UT2024P4LP4.Web.Data.Dtos
+@using UT2024P4LP4.Web.Components.Elements;
