--- a/UT2024P4LP4.Web/Components/Layout/NavMenu.razor
+++ b/UT2024P4LP4.Web/Components/Layout/NavMenu.razor
@@ -18,14 +18,21 @@
             </NavLink>
         </div>
 
-        @* <div class="nav-item px-3">
-            <NavLink class="nav-link" href="counter">
-                <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Counter
-            </NavLink>
-        </div> *@
+
+         @* <div class="nav-item px-3">
+             <NavLink class="nav-link" href="counter">
+                 <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Counter
+             </NavLink>
+         </div> *@
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="productos">
                 <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Productos
+            </NavLink>
+        </div>
+
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="categorias">
+                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Categorias
             </NavLink>
         </div>
 
